--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,66 @@
-<h1>Martha</h1>
+<div class="section-one">
+  <h1 class="welcome-message">Welcome to CSE Motors!</h1>
+  <div class="owntoday-img">
+    <div class="owntoday-box">
+      <ul>
+        <li id="dmc-delorean-heading">DMC Delorean</li>
+        <li>3 Cup Holder</li>
+        <li>Superman Doors</li>
+        <li>Fuzzy Dice</li>
+      </ul>
+      <img
+        src="/images/site/own_today2.png"
+        class="own_today_btn"
+        alt="Own Today"
+      />
+    </div>
+    <img
+      class="delorean"
+      src="/images/vehicles/delorean-tn.jpg"
+      alt="Delorean"
+    />
+  </div>
+</div>
+<div class="section-two">
+  <div class="delorean-updates">
+    <h2>Delorean Updates</h2>
+    <ul>
+      <li>
+        <div class="img-wrapper">
+          <img src="/images/upgrades/flux-cap.png" alt="Flux Capacitor" />
+        </div>
+        <a href="#">Flux Capacitor</a>
+      </li>
+      <li>
+        <div class="img-wrapper">
+          <img src="/images/upgrades/flame.jpg" alt="Flame Decal" />
+        </div>
+        <a href="#">Flame Decals</a>
+      </li>
+    </ul>
+    <ul>
+      <li>
+        <div class="img-wrapper">
+          <img src="/images/upgrades/bumper_sticker.jpg" alt="Bumper Sticker" />
+        </div>
+        <a href="#">Bumper Stickers</a>
+      </li>
+      <li>
+        <div class="img-wrapper">
+          <img src="/images/upgrades/hub-cap.jpg" alt="Hub Caps" />
+        </div>
+        <a href="#">Hub Caps</a>
+      </li>
+    </ul>
+  </div>
+  <div class="delorean-reviews">
+    <h2>Delorean Reviews</h2>
+    <ul>
+      <li>"So fast, it's almost like traveling in time." (4/5)</li>
+      <li>"Coolest ride on the road."(4/5)</li>
+      <li>"I'm feeling McFly!."(5/5)</li>
+      <li>"The most futuristic ride of our day."(4.5/5)</li>
+      <li>"80's living and I love it!"(5/5)</li>
+    </ul>
+  </div>
+</div>
