--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
   <%- include('../partials/head') %>
 
@@ -11,4 +12,5 @@
       <%- include('../partials/footer.ejs') %>
     </div>
   </body>
+</html>
 </html>
